Sprint_16_add-item-requests-and-gateway fixTests